src/objects/Survey_Result__c.object
<CustomObject>
    <description>SSI: To record SSI survey result</description>
    <fields>
        <fullName>Chexing__c</fullName>
        <description>新车型号</description>
        <label>Chexing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>公司名称</description>
        <label>CompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DmsCode__c</fullName>
        <description>DMS代码</description>
        <label>DmsCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dph__c</fullName>
        <description>车架号</description>
        <label>Dph</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etime__c</fullName>
        <description>结束时间（挂断电话的时间）</description>
        <label>Etime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gcrq__c</fullName>
        <description>购车日期</description>
        <label>Gcrq</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gcy__c</fullName>
        <description>购车月</description>
        <label>Gcy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gw__c</fullName>
        <description>销售顾问</description>
        <label>Gw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jxsmc__c</fullName>
        <description>经销商名称</description>
        <label>Jxsmc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Khmc__c</fullName>
        <description>客户名称</description>
        <label>Khmc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile1__c</fullName>
        <description>手机1</description>
        <label>Mobile1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile2__c</fullName>
        <description>手机2</description>
        <label>Mobile2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>最终联系人电话</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SSI_Record__c</fullName>
        <label>SSI Record</label>
        <referenceTo>SSI__c</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tel1__c</fullName>
        <description>电话1</description>
        <label>Tel1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tel2__c</fullName>
        <description>电话2</description>
        <label>Tel2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <description>访员</description>
        <label>Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stime__c</fullName>
        <description>开始时间（拨打电话的时间）</description>
        <label>Stime</label>
        <type>DateTime</type>
    </fields>
    <label>Survey Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <recordTypes>
        <fullName>Welcome_Call_1st_Survey_Result</fullName>
        <active>true</active>
        <label>Welcome Call+1st Survey Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>Welcome_Call_Result</fullName>
        <active>true</active>
        <label>Welcome Call Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>X1st_Survey_Result</fullName>
        <active>true</active>
        <label>1st Survey Result</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2nd_Survey_Result</fullName>
        <active>true</active>
        <label>2nd Survey Result</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>